Fix registration text content end alignment

--- a/less/components/registration.less
+++ b/less/components/registration.less
@@ -20,7 +20,7 @@
     text-align: center;
     color: @brand-primary;
   }
-  .eclipsefdn-registration-body {
+  .eclipsefdn-registration-body, .eclipsefdn-registration-content-end {
     text-align: left;
   }
   .eclipsefdn-registration-links {
